added MORE text

--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@
 	quis, excepturi ipsum laborum explicabo saepe consectetur blanditiis.
 </p>
 <p>This is one commit later</p>
+<strong>THIS IS TWO COMMITS LATER</strong>
