changed the paragraph
see title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <h1>Hey there!</h1>
 <h2>this is new shit</h2>
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime sed quos
-  voluptas eaque quae ipsam suscipit tempore hic nesciunt sit! Esse nulla quis,
-  excepturi ipsum laborum explicabo saepe consectetur blanditiis.
-</p>
+<p>I hope that I can become proficient in this.</p>
 <p>This is one commit later</p>
 <strong>THIS IS TWO COMMITS LATER</strong>
+<strong>THIS IS THREE COMMITS LATER!!!</strong>
